pose data extraction cleanup

--- a/01_pose_data_extraction.ipynb
+++ b/01_pose_data_extraction.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,6 +388,7 @@
     "    \n",
     "    x_columns = sorted([col for col in df.columns if col.endswith('_x')])\n",
     "    y_columns = sorted([col for col in df.columns if col.endswith('_y')])\n",
+    "    v_columns = sorted([col for col in df.columns if col.endswith('_v')])\n",
     "    \n",
     "    x = df[x_columns].iloc[index].to_numpy()\n",
     "    y = df[y_columns].iloc[index].to_numpy()\n",
@@ -466,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
